[tool.poetry]
name = "brokersystem"
version = "0.2.4"
description = "A Python module for communicating with brokersystem"
license = "ISC"
authors = ["chocolate <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
logzero = "^1.7.0"
pandas = "^2.0.3"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
